--- a/views/admin.layouts/navbar.ejs
+++ b/views/admin.layouts/navbar.ejs
@@ -1,19 +1,16 @@
 <!-- Header section -->
 <header class="main-header">
-    <div class="main-header">
+   <div class="main-header">
       <h2>
-        <label for="nav-toggle">
-          <span class="las la-bars"></span>
-        </label>
-        <a class="home__page" href="/">
-          Real Estate Resort Analysis Support System
-        </a>
-      </h2>  
+         <label for="nav-toggle">
+            <span class="las la-bars"></span>
+         </label>
+         <a class="home__page" href="/"> Real Estate Resort Analysis Support System </a>
+      </h2>
       <div class="search-wrapper">
-        <span class="las la-search"> </span>
-        <input type="search" placeholder="Search here" />
+         <span class="las la-search"> </span>
+         <input type="search" placeholder="Search here" />
       </div>
-    </div>
-  </header>
-  <!-- End header -->
-  
+   </div>
+</header>
+<!-- End header -->
