--- a/views/admin/comment.ejs
+++ b/views/admin/comment.ejs
@@ -1,46 +1,40 @@
-
-    <!-- CONTENT  -->
-    <section class="content">
-        <div class="content-header"></div>
-        <div class="content__body  ">
-          <div class="card">
-            <div class="card-header">
-              <h4>Quản lý bình luận</h4>
-            </div>
-            <div class="card-body">
-              <table class="table table-bordered">
-                <thead>
+<!-- CONTENT  -->
+<section class="content">
+   <div class="content-header"></div>
+   <div class="content__body">
+      <div class="card">
+         <div class="card-header">
+            <h4>Quản lý bình luận</h4>
+         </div>
+         <div class="card-body">
+            <table class="table table-bordered">
+               <thead>
                   <tr>
-                    <th class="text-center align-middle">STT</th>
-                    <th class="text-center align-middle text-nowrap">Tên người dùng</th>
-                    <th class="text-center align-middle">Nội dung bình luận</th>
-                    <th class="text-center align-middle" >Action</th>
+                     <th class="text-center align-middle">STT</th>
+                     <th class="text-center align-middle text-nowrap">Tên người dùng</th>
+                     <th class="text-center align-middle">Nội dung bình luận</th>
+                     <th class="text-center align-middle">Action</th>
                   </tr>
-                </thead>
-               
-                <% renderComment.forEach((user, index) => { %>
-                  <tbody>
-                    <th class="text-center align-middle"><%= index +1 %></th>
-                    <td class="text-center align-middle text-nowrap"><%= user.userName %></td>
-                    <td class="text-center align-middle"><%= user.content %></td>
-                    <td class="text-center align-middle">
-                      <a href="/dashboard/deletecmt?id=<%= user._id %>" class="btn btn-danger">Xóa</a>
-                    </td>
-                  </tbody>
-                <% }) %>
-                  
-              </table>
-            </div>
-            
-          </div>
-           <!-- DELETE modal  -->
-            <!-- Modal -->
-            
-        </div>
-<script>
-            const $ = document.querySelector.bind(document)
-            $(".sidebar-menu_comment").classList.add("active");
-</script>
-  
-  
-  
+               </thead>
+
+               <% renderComment.forEach((user, index) => { %>
+               <tbody>
+                  <th class="text-center align-middle"><%= index +1 %></th>
+                  <td class="text-center align-middle text-nowrap"><%= user.userName %></td>
+                  <td class="text-center align-middle"><%= user.content %></td>
+                  <td class="text-center align-middle">
+                     <a href="/dashboard/deletecmt?id=<%= user._id %>" class="btn btn-danger">Xóa</a>
+                  </td>
+               </tbody>
+               <% }) %>
+            </table>
+         </div>
+      </div>
+      <!-- DELETE modal  -->
+      <!-- Modal -->
+   </div>
+   <script>
+      const $ = document.querySelector.bind(document);
+      $('.sidebar-menu_comment').classList.add('active');
+   </script>
+</section>
