--- a/views/layouts/message.ejs
+++ b/views/layouts/message.ejs
@@ -1,22 +1,20 @@
-<link rel="stylesheet" href="styles/message.css">
-            <div class="message-form">
-                    <div class="message-form__header">
-                        <h3 class="message-form__heading">
-                            Bạn vui lòng điền thông tin dưới đây và nội dung gửi
-                    </h3>
-                </div>
-                <div class="message-form__form">
-                    <div class="message-form__group">
-                        <input type="text" class="message-form__input" placeholder="Email">
-                    </div>
-                    <div class="message-form__group">
-                        <input type="text" class="message-form__input" placeholder="Số điện thoại">
-                    </div>
-                    <div class="message-form__group group__content">
-                        <input type="text" class="message-form__input " placeholder="Nội dung">
-                    </div>
-                </div>
-                <div class="message-form__controls">
-                    <button class="message-btn">Xác nhận</button>
-                </div>
-            </div>
+<link rel="stylesheet" href="styles/message.css" />
+<div class="message-form">
+   <div class="message-form__header">
+      <h3 class="message-form__heading">Bạn vui lòng điền thông tin dưới đây và nội dung gửi</h3>
+   </div>
+   <div class="message-form__form">
+      <div class="message-form__group">
+         <input type="text" class="message-form__input" placeholder="Email" />
+      </div>
+      <div class="message-form__group">
+         <input type="text" class="message-form__input" placeholder="Số điện thoại" />
+      </div>
+      <div class="message-form__group group__content">
+         <input type="text" class="message-form__input" placeholder="Nội dung" />
+      </div>
+   </div>
+   <div class="message-form__controls">
+      <button class="message-btn">Xác nhận</button>
+   </div>
+</div>
