--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -1,518 +1,517 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 :root {
-  --main-color: #1b1d32;
-  --color-dark: #1d2231;
-  --text-gray: #838c97;
+   --main-color: #1b1d32;
+   --color-dark: #1d2231;
+   --text-gray: #838c97;
 }
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box !important;
-  list-style-type: none;
-  text-decoration: none !important;
-  font-family: "Poppins", sans-serif;
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box !important;
+   list-style-type: none;
+   text-decoration: none !important;
+   font-family: 'Poppins', sans-serif;
 }
 
 .sidebar {
-  width: 280px;
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  z-index: 100;
-  background: var(--main-color);
-  transition: width 300ms;
-  cursor: pointer;
+   width: 280px;
+   position: fixed;
+   left: 0;
+   top: 0;
+   height: 100%;
+   z-index: 100;
+   background: var(--main-color);
+   transition: width 300ms;
+   cursor: pointer;
 }
 
 .sidebar-brand {
-  height: 90px;
-  padding: 1rem 0rem 1rem 2rem;
-  color: #fff;
+   height: 90px;
+   padding: 1rem 0rem 1rem 2rem;
+   color: #fff;
 }
 
 .sidebar-brand span {
-  display: inline-block;
-  padding-right: 1rem;
+   display: inline-block;
+   padding-right: 1rem;
 }
 
 .sidebar-menu {
-  margin-top: 1rem;
+   margin-top: 1rem;
 }
 
 .sidebar-menu li {
-  width: 100%;
-  margin-bottom: 1.7rem;
-  font-size: 1rem;
+   width: 100%;
+   margin-bottom: 1.7rem;
+   font-size: 1rem;
 }
 
 .sidebar-menu a {
-  padding-left: 1rem;
-  display: block;
-  color: #fff;
-  font-size: 1rem;
+   padding-left: 1rem;
+   display: block;
+   color: #fff;
+   font-size: 1rem;
 }
 
 .sidebar-menu a.active {
-  background: #fff;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  color: var(--main-color);
-  border-radius: 30px 0px 0px 30px;
-  font-weight: bold;
+   background: #fff;
+   padding-top: 1rem;
+   padding-bottom: 1rem;
+   color: var(--main-color);
+   border-radius: 30px 0px 0px 30px;
+   font-weight: bold;
 }
 
 .sidebar-menu a span {
-  font-size: 1.1rem;
-  padding-right: 1rem;
+   font-size: 1.1rem;
+   padding-right: 1rem;
 }
 
 #nav-toggle:checked + .sidebar {
-  width: 70px;
+   width: 70px;
 }
 
 #nav-toggle:checked + .sidebar .sidebar-brand,
 #nav-toggle:checked + .sidebar li {
-  padding-left: 1rem;
-  text-align: center;
+   padding-left: 1rem;
+   text-align: center;
 }
 
 #nav-toggle:checked + .sidebar li a {
-  padding-left: 0rem;
+   padding-left: 0rem;
 }
 
 #nav-toggle:checked + .sidebar .sidebar-brand h3 span:last-child,
 #nav-toggle:checked + .sidebar li a span:last-child {
-  display: none;
+   display: none;
 }
 
 #nav-toggle:checked + .sidebar .sidebar-menu ul {
-  padding-left: 0rem;
+   padding-left: 0rem;
 }
 
 #nav-toggle:checked + .sidebar .sidebar-menu a span {
-  font-size: 1.7rem;
-  font-weight: bold;
+   font-size: 1.7rem;
+   font-weight: bold;
 }
 
 #nav-toggle:checked ~ .main-content {
-  margin-left: 70px;
+   margin-left: 70px;
 }
 
 #nav-toggle:checked ~ .main-content .main-header {
-  left: 70px;
-  width: calc(100% - 70px);
+   left: 70px;
+   width: calc(100% - 70px);
 }
 
 .main-content {
-  transition: margin-left 300ms;
-  margin-left: 280px;
+   transition: margin-left 300ms;
+   margin-left: 280px;
 }
 
 .main-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem 1.5rem;
-  position: fixed;
-  top: 0;
-  z-index: 100;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-  left: 280px;
-  width: calc(100% - 280px);
-  background: #fff;
-  transition: left 300ms;
-  cursor: pointer;
+   display: flex;
+   justify-content: space-between;
+   padding: 1rem 1.5rem;
+   position: fixed;
+   top: 0;
+   z-index: 100;
+   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+   left: 280px;
+   width: calc(100% - 280px);
+   background: #fff;
+   transition: left 300ms;
+   cursor: pointer;
 }
 
 #nav-toggle {
-  display: none;
+   display: none;
 }
 
 .main-header h3 {
-  color: #222;
-  margin-top: 4px;
+   color: #222;
+   margin-top: 4px;
 }
 
 .main-header label span {
-  font-size: 1.7rem;
-  padding-right: 1rem;
-  cursor: pointer;
+   font-size: 1.7rem;
+   padding-right: 1rem;
+   cursor: pointer;
 }
 
 .search-wrapper {
-  border: 1px solid #ccc;
-  border-radius: 30px;
-  height: 48px;
-  display: flex;
-  align-items: center;
-  overflow-x: hidden;
+   border: 1px solid #ccc;
+   border-radius: 30px;
+   height: 48px;
+   display: flex;
+   align-items: center;
+   overflow-x: hidden;
 }
 
 .search-wrapper span {
-  display: inline-block;
-  padding: 0rem 1rem;
-  font-size: 1.5rem;
-  cursor: pointer;
+   display: inline-block;
+   padding: 0rem 1rem;
+   font-size: 1.5rem;
+   cursor: pointer;
 }
 
 .search-wrapper input {
-  height: 100%;
-  padding: 0.5rem;
-  border: none;
-  outline: none;
+   height: 100%;
+   padding: 0.5rem;
+   border: none;
+   outline: none;
 }
 
 .user-wrapper {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
+   display: flex;
+   align-items: center;
+   cursor: pointer;
 }
 
 .user-wrapper img {
-  border-radius: 50%;
-  margin-right: 1rem;
+   border-radius: 50%;
+   margin-right: 1rem;
 }
 
 .user-wrapper h4 {
-  margin-bottom: 0rem !important;
+   margin-bottom: 0rem !important;
 }
 
 .user-wrapper small {
-  display: inline-block;
-  color: var(--text-gray);
+   display: inline-block;
+   color: var(--text-gray);
 }
 
 main {
-  margin-top: 85px;
-  padding: 2rem 1.5rem;
-  background-color: #f1f5f9;
-  min-height: calc(100vh - 90px);
+   margin-top: 85px;
+   padding: 2rem 1.5rem;
+   background-color: #f1f5f9;
+   min-height: calc(100vh - 90px);
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 2rem;
-  margin-top: 1rem;
+   display: grid;
+   grid-template-columns: repeat(4, 1fr);
+   grid-gap: 2rem;
+   margin-top: 1rem;
 }
 
 .card-single {
-  display: flex;
-  justify-content: space-between;
-  background: #fff;
-  padding: 2rem;
-  border-radius: 5px;
-  cursor: pointer;
-  color: var(--color-dark);
+   display: flex;
+   justify-content: space-between;
+   background: #fff;
+   padding: 2rem;
+   border-radius: 5px;
+   cursor: pointer;
+   color: var(--color-dark);
 }
 
 .card-single span {
-  font-size: 3rem;
+   font-size: 3rem;
 }
 .card-single div {
-  font-size: 20px;
+   font-size: 20px;
 }
 
 .card-single:hover {
-  color:rgba(0, 0, 0, 0.5);
+   color: rgba(0, 0, 0, 0.5);
 }
 
-
 .recent-grid {
-  margin-top: 3.5rem;
-  display: grid;
-  grid-gap: 2rem;
-  grid-template-columns: 67% auto;
+   margin-top: 3.5rem;
+   display: grid;
+   grid-gap: 2rem;
+   grid-template-columns: 67% auto;
 }
 
 .card {
-  background: #fff;
-  border-radius: 5px;
+   background: #fff;
+   border-radius: 5px;
 }
 
 .card-header,
 .card-body {
-  padding: 1rem;
+   padding: 1rem;
 }
 
 .card-header {
-  padding-left: 30px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 3px solid var(--main-color);
-  background-color: var(--text-gray);
+   padding-left: 30px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   border-bottom: 3px solid var(--main-color);
+   background-color: var(--text-gray);
 }
 
 .card-header button {
-  background: var(--main-color);
-  border-radius: 15px;
-  color: #fff;
-  font-size: 0.8rem;
-  padding: 0.5rem 1rem;
-  border: 1px solid var(--main-color);
+   background: var(--main-color);
+   border-radius: 15px;
+   color: #fff;
+   font-size: 0.8rem;
+   padding: 0.5rem 1rem;
+   border: 1px solid var(--main-color);
 }
 
 table {
-  border-collapse: collapse;
+   border-collapse: collapse;
 }
 
 thead tr {
-  border-top: 1px solid #f0f0f0;
-  border-bottom: 1px solid #f0f0f0;
+   border-top: 1px solid #f0f0f0;
+   border-bottom: 1px solid #f0f0f0;
 }
 
 thead td {
-  font-weight: 700;
+   font-weight: 700;
 }
 
 td {
-  padding: 0.5rem 1rem;
-  font-size: 0.9rem;
-  color: #222;
+   padding: 0.5rem 1rem;
+   font-size: 0.9rem;
+   color: #222;
 }
 
 .student {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5rem;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 0.5rem;
 }
 
 .info {
-  display: flex;
-  align-items: center;
+   display: flex;
+   align-items: center;
 }
 
 .info img {
-  border-radius: 50%;
-  margin-right: 1rem;
-  cursor: pointer;
+   border-radius: 50%;
+   margin-right: 1rem;
+   cursor: pointer;
 }
 
 .info h4 {
-  font-size: 0.9rem;
-  font-weight: 700;
-  color: #222;
+   font-size: 0.9rem;
+   font-weight: 700;
+   color: #222;
 }
 
 .info small {
-  font-weight: 600;
-  color: var(--text-gray);
+   font-weight: 600;
+   color: var(--text-gray);
 }
 
 .contact span {
-  font-size: 1.4rem;
-  display: inline-block;
-  margin-left: 0.5rem;
-  color: var(--main-color);
-  cursor: pointer;
+   font-size: 1.4rem;
+   display: inline-block;
+   margin-left: 0.5rem;
+   color: var(--main-color);
+   cursor: pointer;
 }
 
 @media only screen and (max-width: 1200px) {
-  .sidebar {
-    width: 70px;
-  }
+   .sidebar {
+      width: 70px;
+   }
 
-  .sidebar .sidebar-brand,
-  .sidebar li {
-    padding-left: 1rem;
-    text-align: center;
-  }
+   .sidebar .sidebar-brand,
+   .sidebar li {
+      padding-left: 1rem;
+      text-align: center;
+   }
 
-  .sidebar li a {
-    padding-left: 0rem;
-  }
+   .sidebar li a {
+      padding-left: 0rem;
+   }
 
-  .sidebar .sidebar-brand h3 span:last-child,
-  .sidebar li a span:last-child {
-    display: none;
-  }
+   .sidebar .sidebar-brand h3 span:last-child,
+   .sidebar li a span:last-child {
+      display: none;
+   }
 
-  .sidebar .sidebar-menu ul {
-    padding-left: 0rem;
-  }
+   .sidebar .sidebar-menu ul {
+      padding-left: 0rem;
+   }
 
-  .sidebar .sidebar-menu a span {
-    font-size: 1.7rem;
-    font-weight: bold;
-  }
+   .sidebar .sidebar-menu a span {
+      font-size: 1.7rem;
+      font-weight: bold;
+   }
 
-  .main-content {
-    margin-left: 70px;
-  }
+   .main-content {
+      margin-left: 70px;
+   }
 
-  .main-content .main-header {
-    left: 70px;
-    width: calc(100% - 70px);
-  }
+   .main-content .main-header {
+      left: 70px;
+      width: calc(100% - 70px);
+   }
 }
 
 @media only screen and (max-width: 960px) {
-  .cards {
-    grid-template-columns: repeat(3, 1fr);
-  }
+   .cards {
+      grid-template-columns: repeat(3, 1fr);
+   }
 
-  .recent-grid {
-    grid-template-columns: 60% 40%;
-  }
+   .recent-grid {
+      grid-template-columns: 60% 40%;
+   }
 }
 
 @media only screen and (max-width: 768px) {
-  .cards {
-    grid-template-columns: repeat(2, 1fr);
-  }
+   .cards {
+      grid-template-columns: repeat(2, 1fr);
+   }
 
-  .recent-grid {
-    grid-template-columns: 100%;
-  }
+   .recent-grid {
+      grid-template-columns: 100%;
+   }
 
-  .search-wrapper {
-    display: none;
-  }
+   .search-wrapper {
+      display: none;
+   }
 
-  .sidebar {
-    left: -100% !important;
-  }
+   .sidebar {
+      left: -100% !important;
+   }
 
-  .user-wrapper h4 {
-    font-size: 1rem;
-  }
+   .user-wrapper h4 {
+      font-size: 1rem;
+   }
 
-  .main-header h3 {
-    display: flex;
-    align-items: center;
-  }
+   .main-header h3 {
+      display: flex;
+      align-items: center;
+   }
 
-  .main-header h3 label {
-    display: inline-block;
-    align-items: center;
-    background: var(--main-color);
-    padding-right: 0rem;
-    margin-right: 1rem;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center !important;
-  }
+   .main-header h3 label {
+      display: inline-block;
+      align-items: center;
+      background: var(--main-color);
+      padding-right: 0rem;
+      margin-right: 1rem;
+      height: 40px;
+      width: 40px;
+      border-radius: 50%;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center !important;
+   }
 
-  .main-header h3 {
-    font-size: 1rem;
-  }
+   .main-header h3 {
+      font-size: 1rem;
+   }
 
-  .main-header h3 span {
-    text-align: center;
-    padding-right: 0rem;
-  }
+   .main-header h3 span {
+      text-align: center;
+      padding-right: 0rem;
+   }
 
-  .main-content {
-    width: 100%;
-    margin-left: 0rem;
-  }
+   .main-content {
+      width: 100%;
+      margin-left: 0rem;
+   }
 
-  .main-header {
-    width: 100% !important;
-    left: 0 !important;
-  }
+   .main-header {
+      width: 100% !important;
+      left: 0 !important;
+   }
 
-  #nav-toggle:checked + .sidebar {
-    left: 0 !important;
-    z-index: 100;
-    width: 280px;
-  }
+   #nav-toggle:checked + .sidebar {
+      left: 0 !important;
+      z-index: 100;
+      width: 280px;
+   }
 
-  #nav-toggle:checked + .sidebar .sidebar-brand,
-  #nav-toggle:checked + .sidebar li {
-    padding-left: 1rem;
-    text-align: left;
-  }
+   #nav-toggle:checked + .sidebar .sidebar-brand,
+   #nav-toggle:checked + .sidebar li {
+      padding-left: 1rem;
+      text-align: left;
+   }
 
-  #nav-toggle:checked + .sidebar li a {
-    padding-left: 1rem;
-  }
+   #nav-toggle:checked + .sidebar li a {
+      padding-left: 1rem;
+   }
 
-  #nav-toggle:checked + .sidebar.sidebar-brand h3 span:last-child,
-  #nav-toggle:checked + .sidebar li a span:last-child {
-    display: inline;
-    font-size: 16px;
-  }
+   #nav-toggle:checked + .sidebar.sidebar-brand h3 span:last-child,
+   #nav-toggle:checked + .sidebar li a span:last-child {
+      display: inline;
+      font-size: 16px;
+   }
 
-  #nav-toggle:checked + .sidebar .sidebar-menu ul {
-    padding-left: 0rem;
-  }
+   #nav-toggle:checked + .sidebar .sidebar-menu ul {
+      padding-left: 0rem;
+   }
 
-  #nav-toggle:checked + .sidebar .sidebar-menu a span {
-    font-size: 1.7rem;
-    font-weight: bold;
-  }
+   #nav-toggle:checked + .sidebar .sidebar-menu a span {
+      font-size: 1.7rem;
+      font-weight: bold;
+   }
 
-  #nav-toggle:checked ~ .main-content {
-    margin-left: 0rem !important;
-  }
+   #nav-toggle:checked ~ .main-content {
+      margin-left: 0rem !important;
+   }
 }
 
 @media only screen and (max-width: 560px) {
-  .cards {
-    grid-template-columns: 100%;
-  }
+   .cards {
+      grid-template-columns: 100%;
+   }
 }
 
 @media only screen and (max-width: 380px) {
-  .cards {
-    grid-template-columns: 100%;
-  }
+   .cards {
+      grid-template-columns: 100%;
+   }
 
-  .user-wrapper img {
-    margin-top: -6px;
-    margin-right: -4px;
-  }
+   .user-wrapper img {
+      margin-top: -6px;
+      margin-right: -4px;
+   }
 
-  .user-wrapper h4 {
-    display: none;
-  }
+   .user-wrapper h4 {
+      display: none;
+   }
 
-  .user-wrapper small {
-    display: none;
-  }
+   .user-wrapper small {
+      display: none;
+   }
 
-  .main-header h3 {
-    font-weight: bold;
-  }
-} ;
+   .main-header h3 {
+      font-weight: bold;
+   }
+}
 
 .room-item {
-  width: 500px;
-  min-height: 700px;
-  padding: 16px;
-  margin-bottom: 10px;
-  border: 4px solid black !important;
+   width: 500px;
+   min-height: 700px;
+   padding: 16px;
+   margin-bottom: 10px;
+   border: 4px solid black !important;
 }
 .image-room {
-  width: 100%;
-  height: 400px;
+   width: 100%;
+   height: 400px;
 }
 .image-room img {
-  width: 100%;
-  height: 100%;
-} 
+   width: 100%;
+   height: 100%;
+}
 
 .home__page {
-  color:#25262c;
+   color: #25262c;
 }
 
 .home__page:hover {
-  color:#25262c;
+   color: #25262c;
 }
 
 .phase__click {
-  margin-bottom: 20px;
+   margin-bottom: 20px;
 }
 
 .phase__input {
-  margin-bottom: 20px;
+   margin-bottom: 20px;
 }
