--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,150 +1,147 @@
 li {
-    list-style-type: none;
+   list-style-type: none;
 }
 
 a {
-    text-decoration: none;
-    color: #000;
+   text-decoration: none;
+   color: #000;
 }
 a:hover {
-    text-decoration: none;
-    color: #000;
+   text-decoration: none;
+   color: #000;
 }
 
-.header__header-main{
-    width: 100%;
-    height: 71px;
-    background: #fff;
+.header__header-main {
+   width: 100%;
+   height: 71px;
+   background: #fff;
 }
 
 .site-header {
-    max-height: 71px;
-    display: flex;
-    width: 100%;    
-    background-color: #fff;
-    border-bottom: 1px solid #ccc;
-    padding: .5em 1em;
-    text-align: center;
-    align-items: center;
-    justify-content: space-around;
-    position: fixed;
-    z-index: 1000;
-    
+   max-height: 71px;
+   display: flex;
+   width: 100%;
+   background-color: #fff;
+   border-bottom: 1px solid #ccc;
+   padding: 0.5em 1em;
+   text-align: center;
+   align-items: center;
+   justify-content: space-around;
+   position: fixed;
+   z-index: 1000;
 }
 .sticky {
-  
-  }
-  
-.site-identity{
-    margin: .6em 0;
-}
-.site-identity .logo-name {
-    font-size: 40px;
 }
 
-.site-navigation{
-    height: 100%;
-    display: flex;
+.site-identity {
+   margin: 0.6em 0;
+}
+.site-identity .logo-name {
+   font-size: 40px;
+}
+
+.site-navigation {
+   height: 100%;
+   display: flex;
 }
 .site-navigation ul,
 .site-navigation li {
-    margin: 0;
-    padding: 0;
+   margin: 0;
+   padding: 0;
 }
 
 .nav-header_item a {
-    font-size: 20px;
-    font-weight: 400;
-    padding: 14px 15px;
-    border: transparent;
+   font-size: 20px;
+   font-weight: 400;
+   padding: 14px 15px;
+   border: transparent;
 }
 
-.active{
-    margin-top: 1px;
-    border-bottom: 2px solid black !important;
+.active {
+   margin-top: 1px;
+   border-bottom: 2px solid black !important;
 }
 
 .nav-header_item a:hover {
-    border-bottom: 2.5px solid black;
+   border-bottom: 2.5px solid black;
 }
 .nav-header {
-    font-size: 1.6rem;
-    width: 100%;
-    height:100%;
-    display:flex;
+   font-size: 1.6rem;
+   width: 100%;
+   height: 100%;
+   display: flex;
 }
 .site-log {
-    display:flex;
-    height: 100%;
-    text-align: center;
-    align-items: center; 
-    background: #000;
-    border-radius: 20px;
-    padding: 8px;
-    margin-left:500px;
+   display: flex;
+   height: 100%;
+   text-align: center;
+   align-items: center;
+   background: #000;
+   border-radius: 20px;
+   padding: 8px;
+   margin-left: 500px;
 }
 
 .nav-link {
-    color: #fff;
-    font-size: 18px;
-    margin: 0 15px;
-    padding: 0px;
+   color: #fff;
+   font-size: 18px;
+   margin: 0 15px;
+   padding: 0px;
 }
-.nav-link:hover{
-    color: white;
+.nav-link:hover {
+   color: white;
 }
 
 .separate {
-height: 22px;
-    border-right: 2px solid #fff;
+   height: 22px;
+   border-right: 2px solid #fff;
 }
 .nav-link:hover {
-    text-decoration: none;
+   text-decoration: none;
 }
 
 .btn-login {
-    width: 100px;
-    height: 40px;
-    background: #775fe2;
-    border-radius: 3px;
-    font-size: 14px;
-    color: #fff;
-    transition: all .2s ease-out, color .2s ease-out;
-    border: 0;
-    font-weight: bold;
+   width: 100px;
+   height: 40px;
+   background: #775fe2;
+   border-radius: 3px;
+   font-size: 14px;
+   color: #fff;
+   transition: all 0.2s ease-out, color 0.2s ease-out;
+   border: 0;
+   font-weight: bold;
 }
 
 .login-register {
-    float: right;
-    margin-left: 630px;
-    padding-top: 10px;
+   float: right;
+   margin-left: 630px;
+   padding-top: 10px;
 }
 
 .btn-register {
-    width: 100px;
-    height: 40px;
-    background: #775fe2;
-    border-radius: 3px;
-    font-size: 14px;
-    color: #fff;
-    transition: all .2s ease-out, color .2s ease-out;
-    border: 0;
-    font-weight: bold;
+   width: 100px;
+   height: 40px;
+   background: #775fe2;
+   border-radius: 3px;
+   font-size: 14px;
+   color: #fff;
+   transition: all 0.2s ease-out, color 0.2s ease-out;
+   border: 0;
+   font-weight: bold;
 }
 
 .btn {
-    float: right;
-    margin-top: -55px;
-    margin-right: 16px;
-    min-width: 100px;
-    height: 40px;
-    padding: 0 15px;
-    background: #57b846;
-    border-radius: 3px;
-    font-size: 14px;
-    color: #fff;
-    transition: all .2s ease-out, color .2s ease-out;
-    border: 0;
-    font-weight: bold;
+   float: right;
+   margin-top: -55px;
+   margin-right: 16px;
+   min-width: 100px;
+   height: 40px;
+   padding: 0 15px;
+   background: #57b846;
+   border-radius: 3px;
+   font-size: 14px;
+   color: #fff;
+   transition: all 0.2s ease-out, color 0.2s ease-out;
+   border: 0;
+   font-weight: bold;
 }
-
