--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,445 +1,442 @@
-*
-{
-  margin:auto;
-  padding:auto;
-  box-sizing: border-box;
+* {
+   margin: auto;
+   padding: auto;
+   box-sizing: border-box;
 }
 
-
-body, html {
-    background-color: #f0f2f5;
-    background-image: url(../images/2.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 100%;
-    height: 100vh;
-    text-rendering: optimizeLegibility;
+body,
+html {
+   background-color: #f0f2f5;
+   background-image: url(../images/2.webp);
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: 100%;
+   height: 100vh;
+   text-rendering: optimizeLegibility;
 }
 
-.main h1{ 
-  height: 100px;
-  padding-top: 30px ;
-  font-weight: 300;
-  text-align: center;
-  color: white;
+.main h1 {
+   height: 100px;
+   padding-top: 30px;
+   font-weight: 300;
+   text-align: center;
+   color: white;
 }
 
-.content-main{
-  width: 70%;
-  display: flex;
+.content-main {
+   width: 70%;
+   display: flex;
 }
 
-.content-left{
-    width: 50%;
-    float: left;
-    background: url(../images/3.jpg) no-repeat center ;
-    height: 555px;
+.content-left {
+   width: 50%;
+   float: left;
+   background: url(../images/3.jpg) no-repeat center;
+   height: 555px;
 }
-h2.agileits1{
-  font-weight: 300;
-  text-align: center;
-  align-items: center;
-  margin: 200px auto 0 auto;
-  padding: 200px 0 15px;
-  color: white;
+h2.agileits1 {
+   font-weight: 300;
+   text-align: center;
+   align-items: center;
+   margin: 200px auto 0 auto;
+   padding: 200px 0 15px;
+   color: white;
 }
-p.agileits2{
-  font-weight: 300;
+p.agileits2 {
+   font-weight: 300;
 
-  text-align: center;
-  align-items: center;
-  margin: auto;
-  color: white;
-
+   text-align: center;
+   align-items: center;
+   margin: auto;
+   color: white;
 }
-.content-right{
-  width: 50%;
-  float: left;
-  background-color: black;
-  text-align: center;
-  margin: 0 auto;
-  padding: 40px 0;
-  opacity: 0.8;
-  max-height: 555px;
-  height: 555px;
+.content-right {
+   width: 50%;
+   float: left;
+   background-color: black;
+   text-align: center;
+   margin: 0 auto;
+   padding: 40px 0;
+   opacity: 0.8;
+   max-height: 555px;
+   height: 555px;
 }
 .form-group input {
-  width: 75%;
-  height: 45px;
-  border-radius: 10px;
-  color: rgb(0, 0, 0);
-  margin-top: 20px;
-  padding-left: 25px;
+   width: 75%;
+   height: 45px;
+   border-radius: 10px;
+   color: rgb(0, 0, 0);
+   margin-top: 20px;
+   padding-left: 25px;
 }
 
-.f-pass{
-  color: white;
-  background-color: #000;
+.f-pass {
+   color: white;
+   background-color: #000;
 
-  margin: 20px 0 20px 0;
-  cursor: pointer;
+   margin: 20px 0 20px 0;
+   cursor: pointer;
 }
-.f-pass:hover{
-  color: #3399FF ;
+.f-pass:hover {
+   color: #3399ff;
 }
 
-.login{
-  width: 75%;
-  background-color: white;
-  height: 45px;
-  margin-top: 40px;
-  border: 2px solid;
-  border-radius: 15px;
+.login {
+   width: 75%;
+   background-color: white;
+   height: 45px;
+   margin-top: 40px;
+   border: 2px solid;
+   border-radius: 15px;
 }
 .login:hover {
-  opacity: 0.8;
+   opacity: 0.8;
 }
-.text-footer{
-  margin-top: 10px;
-  font-size: 16px;
-  color: white;
-  font-weight: 300;
-  width: 70%;
-}
-
-.social-agileinfo{
-  padding: 0;
-  list-style: none;
-  display: flex ;
-  width: 75%;
+.text-footer {
+   margin-top: 10px;
+   font-size: 16px;
+   color: white;
+   font-weight: 300;
+   width: 70%;
 }
 
-.social-agileinfo button{
-  padding: 3px 20px 3px 0;
-  color: #000;
-  border: 1px solid #fff;
-  border-radius: 10px;
-  background: #fff;
-  text-decoration: none;
-}
-.social-agileinfo i{
-  padding: 8px 10px;
-  color: #000;
-}
-.social-agileinfo li:hover{
-  color: #333;
-  opacity: 0.9;
+.social-agileinfo {
+   padding: 0;
+   list-style: none;
+   display: flex;
+   width: 75%;
 }
 
-.content-footer{
-  margin-top: 110px;
-  color: white;
-  opacity: 0.8;
+.social-agileinfo button {
+   padding: 3px 20px 3px 0;
+   color: #000;
+   border: 1px solid #fff;
+   border-radius: 10px;
+   background: #fff;
+   text-decoration: none;
+}
+.social-agileinfo i {
+   padding: 8px 10px;
+   color: #000;
+}
+.social-agileinfo li:hover {
+   color: #333;
+   opacity: 0.9;
 }
 
+.content-footer {
+   margin-top: 110px;
+   color: white;
+   opacity: 0.8;
+}
 
 /* ----------------------MODAL ----------*/
-.modal-fpass{
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 1050;
-  width: 30%;
-  height: 56%;
-  overflow: hidden;
-  outline: 0;
-  background-color: #fff;
-  display: none;
-  animation: modalFacein ease 0.5s;
+.modal-fpass {
+   position: fixed;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   right: 0;
+   z-index: 1050;
+   width: 30%;
+   height: 56%;
+   overflow: hidden;
+   outline: 0;
+   background-color: #fff;
+   display: none;
+   animation: modalFacein ease 0.5s;
 }
-.open{
-  display: block;
-
+.open {
+   display: block;
 }
-.modal-header{
-  background-color: #3399FF;
-  color: white;
-  padding: 0;
+.modal-header {
+   background-color: #3399ff;
+   color: white;
+   padding: 0;
 }
-.modal-header h4{
-  margin-top: 5px;
+.modal-header h4 {
+   margin-top: 5px;
 }
 .modal-header i {
-  font-size: 20px;
-  margin: 0;
-  padding: 10px;
+   font-size: 20px;
+   margin: 0;
+   padding: 10px;
 }
-.modal-header i:hover{
-  cursor: pointer;
+.modal-header i:hover {
+   cursor: pointer;
 }
-.modal-body{
-  margin: 0 auto;
+.modal-body {
+   margin: 0 auto;
 }
-.email-verificaion{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  max-width: 70%;
-  width: 300px;
+.email-verificaion {
+   margin-top: 20px;
+   margin-bottom: 20px;
+   max-width: 70%;
+   width: 300px;
 }
 .email-verificaion i {
-  position: absolute;
-  transform: translate(25px,15px) ;
+   position: absolute;
+   transform: translate(25px, 15px);
 }
 .email-verificaion input {
-  border: none;
-  margin: 5px 16px;
-  padding-left: 35px;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom:5px ;
-  border: 1px solid rgba(0, 0, 0, .3);
-  border-radius: 8px;
-  width: 280px;
-
+   border: none;
+   margin: 5px 16px;
+   padding-left: 35px;
+   padding-top: 5px;
+   padding-right: 5px;
+   padding-bottom: 5px;
+   border: 1px solid rgba(0, 0, 0, 0.3);
+   border-radius: 8px;
+   width: 280px;
 }
-.capcha{  
-  margin-top: 20px;
-  max-width: 65%;
+.capcha {
+   margin-top: 20px;
+   max-width: 65%;
 }
-.capcha input{
-  width: 50%;
-  padding-left: 5px;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom:5px ;
-  border: 1px solid rgba(0, 0, 0, .3);
-  border-radius: 8px;
-  margin-left: 5px;
-}
-
-.btn-getpass{
-  background-color: #3399FF;
-  color: #fff;
-  margin-top:  50px;
-  margin-left: 65px;
-  width: 70%;
-  height: 35px;
-  border: none;
-  border-radius: 10px;
-}
-.btn-getpass:hover{
-  opacity: 0.8;
-}
-.capcha label{
-  margin-left: 20px;
-}
-.modal-footer{
-  max-width: 61%;
-  margin: 30px auto 0 auto;
+.capcha input {
+   width: 50%;
+   padding-left: 5px;
+   padding-top: 5px;
+   padding-right: 5px;
+   padding-bottom: 5px;
+   border: 1px solid rgba(0, 0, 0, 0.3);
+   border-radius: 8px;
+   margin-left: 5px;
 }
 
+.btn-getpass {
+   background-color: #3399ff;
+   color: #fff;
+   margin-top: 50px;
+   margin-left: 65px;
+   width: 70%;
+   height: 35px;
+   border: none;
+   border-radius: 10px;
+}
+.btn-getpass:hover {
+   opacity: 0.8;
+}
+.capcha label {
+   margin-left: 20px;
+}
+.modal-footer {
+   max-width: 61%;
+   margin: 30px auto 0 auto;
+}
 
 @keyframes modalFacein {
-    from{
+   from {
       opacity: 0;
       transform: translateY(-150px);
-    }
-    to{
+   }
+   to {
       opacity: 1;
       transform: translateY(0);
-    }
+   }
 }
 /* --------------------END MODAL---------------- */
-
-
-
-
-
-
-
 
 /*--------------------*/
 /* 05. Responsive CSS */
 /*--------------------*/
 
-@media (max-width:1600px) {
-	h2.agileits1 {
-	padding: 225px 0 15px;	
-	}
+@media (max-width: 1600px) {
+   h2.agileits1 {
+      padding: 225px 0 15px;
+   }
 }
 
 @media (max-width: 1366px) {
-  h2.agileits1 {
+   h2.agileits1 {
       padding: 235px 0 15px;
-  }
+   }
 }
 
 @media (max-width: 1080px) {
-	/*-- agileits --*/
-  h1.title {
+   /*-- agileits --*/
+   h1.title {
       font-size: 40px;
-  }
-  .content-main {
-    width:80%;
-    margin: 0 auto 40px;
-  }
-  p.agileits2 {
+   }
+   .content-main {
+      width: 80%;
+      margin: 0 auto 40px;
+   }
+   p.agileits2 {
       font-size: 14px;
-  }
-  p.text-footer {
+   }
+   p.text-footer {
       font-size: 14px;
-  }
-  input#firstname, input#email, input#password1, input#password2 {
-    font-size:15px;
-  }
+   }
+   input#firstname,
+   input#email,
+   input#password1,
+   input#password2 {
+      font-size: 15px;
+   }
 }
 
 @media (max-width: 1024px) {
-  h1.title {
-    padding: 30px 0;
-    font-size:35px;
-  }
+   h1.title {
+      padding: 30px 0;
+      font-size: 35px;
+   }
 }
 
 @media (max-width: 991px) {
-  h2.agileits1 {
+   h2.agileits1 {
       padding: 230px 0 15px;
-  }
-  .content-main {
+   }
+   .content-main {
       width: 90%;
-  }
+   }
 }
 
 @media (max-width: 800px) {
-  input#firstname, input#email, input#password1, input#password2 {
+   input#firstname,
+   input#email,
+   input#password1,
+   input#password2 {
       width: 260px;
-  }
-  input.register {
+   }
+   input.register {
       width: 265px;
-  }
-  p.agileits2 {
+   }
+   p.agileits2 {
       font-size: 14px;
       line-height: 30px;
       padding: 0 10px;
-  }
- 
-/*-- agileits --*/
+   }
+
+   /*-- agileits --*/
 }
 
 @media (max-width: 768px) {
-  h2.agileits1 {
+   h2.agileits1 {
       padding: 210px 0 15px;
-  }
+   }
 }
 
 @media (max-width: 736px) {
-  .content-main{
-    display: block;
-  }
-  .content-main .content-left {
-    width: 100%;
-    height:250px;
-  }
-  h2.agileits1 {
+   .content-main {
+      display: block;
+   }
+   .content-main .content-left {
+      width: 100%;
+      height: 250px;
+   }
+   h2.agileits1 {
       padding: 75px 0 15px;
-  }
-  .content-main .content-right {
+   }
+   .content-main .content-right {
       width: 100%;
       padding: 25px 0 30px;
-  }
-  .content-main {
+   }
+   .content-main {
       width: 65%;
-  }
+   }
 }
 
 @media (max-width: 600px) {
-  h2.agileits1 {
+   h2.agileits1 {
       padding: 65px 0 10px;
-  }
+   }
 }
 
 @media (max-width: 568px) {
-  .content-w3ls {
+   .content-w3ls {
       width: 70%;
-  }
+   }
 }
 
 @media (max-width: 480px) {
-  h2.agileits1 {
+   h2.agileits1 {
       font-size: 35px;
-  }
+   }
 }
 
 @media (max-width: 414px) {
-  h1.title {
+   h1.title {
       padding: 25px 0;
       font-size: 30px;
-  }
-  .content-main {
-    /*-- agileinfo --*/
+   }
+   .content-main {
+      /*-- agileinfo --*/
       width: 85%;
-    margin: 0 auto 10px;
-  }
+      margin: 0 auto 10px;
+   }
 }
 
 @media (max-width: 384px) {
-  input#firstname, input#email, input#password1, input#password2 {
+   input#firstname,
+   input#email,
+   input#password1,
+   input#password2 {
       width: 230px;
-    height: 40px;
-  }
-  input.register {
+      height: 40px;
+   }
+   input.register {
       width: 260px;
-    height:45px;
-  }
-  p.text-footer {
+      height: 45px;
+   }
+   p.text-footer {
       font-size: 14px;
       padding: 0 15px 20px;
       line-height: 30px;
-  }
+   }
 }
 
 @media (max-width: 375px) {
-  h1.w3ls {
+   h1.w3ls {
       padding: 25px 0;
       font-size: 27px;
-  }
-  h2.agileits1 {
+   }
+   h2.agileits1 {
       font-size: 25px;
-    padding: 43px 0 10px;
-  }
-  .content-main  {
+      padding: 43px 0 10px;
+   }
+   .content-main {
       width: 100%;
       height: 200px;
-  }
+   }
 }
 
 @media (max-width: 320px) {
-  h1.w3ls {
+   h1.w3ls {
       padding: 25px 0;
       font-size: 24px;
-  }
-  .content-main .content-left {
+   }
+   .content-main .content-left {
       width: 100%;
       height: 180px;
-  }
-  h2.agileits1 {
+   }
+   h2.agileits1 {
       font-size: 22px;
       padding: 37px 0 10px;
-  }
-  /*-- agileinfo --*/
-  p.agileits2 {
+   }
+   /*-- agileinfo --*/
+   p.agileits2 {
       font-size: 13px;
-  }
-  input#firstname, input#email, input#password1, input#password2 {
+   }
+   input#firstname,
+   input#email,
+   input#password1,
+   input#password2 {
       width: 195px;
       height: 40px;
-    font-size: 14px;
-  }
-  .content-main {
+      font-size: 14px;
+   }
+   .content-main {
       width: 90%;
       margin: 0 auto;
-  }
-  input.register {
+   }
+   input.register {
       width: 230px;
       height: 40px;
-    font-size:15px;
-  }
-  p.text-footer {
+      font-size: 15px;
+   }
+   p.text-footer {
       font-size: 13px;
       padding: 0 15px 15px;
-  }
-
+   }
 }
-
