--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,42 +1,42 @@
 <div class="cards">
-    <a href="/dashboard/users" class="card-single">
+   <a href="/dashboard/users" class="card-single">
       <div>
-        <h1><%=numOfUser%></h1>
-        <div>Users</div>
+         <h1><%=numOfUser%></h1>
+         <div>Users</div>
       </div>
       <div>
-        <span class="las la-users"></span>
+         <span class="las la-users"></span>
       </div>
-    </a>
-    <a href="/dashboard/viewApartment" class="card-single">
+   </a>
+   <a href="/dashboard/viewApartment" class="card-single">
       <div>
-        <h1><%=numOfPost%></h1>
-        <div>Apartments</div>
-      </div>
-      <div>
-        <span class="las la-umbrella-beach"></span>
-      </div>
-    </a>
-    <a href="/dashboard/comment" class="card-single">
-      <div>
-        <h1><%= numOfComment%></h1>
-        <div>Comments</div>
+         <h1><%=numOfPost%></h1>
+         <div>Apartments</div>
       </div>
       <div>
-        <span class="las la-comment"></span>
+         <span class="las la-umbrella-beach"></span>
       </div>
-    </a>
-    <a href="/dashboard/notification" class="card-single">
+   </a>
+   <a href="/dashboard/comment" class="card-single">
       <div>
-        <h1>65</h1>
-        <div>Notifications</div>
+         <h1><%= numOfComment%></h1>
+         <div>Comments</div>
       </div>
       <div>
-        <span class="las la-clipboard-list"></span>
+         <span class="las la-comment"></span>
       </div>
-    </a>
-  </div>
-  <script>
-    const $ = document.querySelector.bind(document)
-    $(".sidebar-menu_dashboard").classList.add("active");
+   </a>
+   <a href="/dashboard/notification" class="card-single">
+      <div>
+         <h1>65</h1>
+         <div>Notifications</div>
+      </div>
+      <div>
+         <span class="las la-clipboard-list"></span>
+      </div>
+   </a>
+</div>
+<script>
+   const $ = document.querySelector.bind(document);
+   $('.sidebar-menu_dashboard').classList.add('active');
 </script>
