--- a/views/components/profile.ejs
+++ b/views/components/profile.ejs
@@ -1,162 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="styles/profile.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" >
-</head>
-<body>
-    <%- include('../layouts/header')%>
-   <div class="profile__container grid wide">
-    
-        <div class="profile__main">
-                <div class="row">
-                    <div class="col-md-4 md4">
-                        <div class="profile__card">
-                            <div class="profile__card-body">
-                                    <img class="profile__avatar" src="<%=user.avatar%>" alt="Hình ảnh đại diện">
-                                
-                                <form method="POST" action="profile/avatar" enctype="multipart/form-data" class="profile__form-update-avt">
-                                    <div class="profile__form-group">
-                                      <input type="file" name="file" class="profile__form-control" id="customFile"/>
-                                    </div>
-                                  
-                            </div>
-                            <div class="profile__card-footer">
-                                <button class="profile__btn-update-avt btn-outline-success" type="submit">
-                                    Cập nhật
-                                </button>
-                            </div>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Profile</title>
+      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+      <link rel="stylesheet" href="styles/profile.css" />
+      <link rel="stylesheet" href="styles/base.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
+   </head>
+   <body>
+      <%- include('../layouts/header')%>
+      <div class="profile__container grid wide">
+         <div class="profile__main">
+            <div class="row">
+               <div class="col-md-4 md4">
+                  <div class="profile__card">
+                     <div class="profile__card-body">
+                        <img class="profile__avatar" src="<%=user.avatar%>" alt="Hình ảnh đại diện" />
+
+                        <form
+                           method="POST"
+                           action="profile/avatar"
+                           enctype="multipart/form-data"
+                           class="profile__form-update-avt"
+                        >
+                           <div class="profile__form-group">
+                              <input type="file" name="file" class="profile__form-control" id="customFile" />
+                           </div>
+                           <div class="profile__card-footer">
+                              <button class="profile__btn-update-avt btn-outline-success" type="submit">
+                                 Cập nhật
+                              </button>
+                           </div>
                         </form>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="col-md-8" style="padding-left: 70px">
+                  <div class="profile__card">
+                     <div class="profile__card-header">
+                        <h2 class="profile__title-info-2"></h2>
+                     </div>
+                     <div class="profile__card-body">
+                        <ul class="profile__information">
+                           <li class="profile__infor-item">
+                              <h3 class="profile__infor-label">Tên người dùng</h3>
+                              <div class="profile__fullName infor-content"><%=user.fullname%></div>
+                           </li>
+                           <li class="profile__infor-item">
+                              <h3 class="profile__infor-label">Email</h3>
+                              <div class="profile__email infor-content"><%=user.email%></div>
+                           </li>
+
+                           <li class="profile__infor-item">
+                              <h3 class="profile__infor-label">Số điện thoại</h3>
+                              <div class="profile__phoneNumber infor-content"><%=user.phonenumber%></div>
+                           </li>
+                        </ul>
+                     </div>
+                     <div class="profile__card-footer">
+                        <button class="profile__btn-update" id="myBtn">Chỉnh sửa</button>
+                        <button class="profile__btn-update" id="myBtn__password">Đổi mật khẩu</button>
+                        <!-- Trigger/Open The Modal -->
+                        <!-- The Modal -->
+                        <div id="myModal" class="modal">
+                           <!-- Modal content -->
+                           <div class="modal--content">
+                              <span class="close">&times;</span>
+                              <h1>Change Password</h1>
+                              <div class="row1">
+                                 <div class="col l-6">
+                                    <h3 class="profile__infor-label">Tên người dùng:</h3>
+                                    <h3 class="profile__infor-label">Số điện thoại:</h3>
+                                 </div>
+                                 <div class="col l-6">
+                                    <div class="edit__profile">
+                                       <form action="/profile/update?_method=PUT" method="POST">
+                                          <input
+                                             type="text"
+                                             name="fullname"
+                                             value="<%=user.fullname%>"
+                                             placeholder="Nhập tên"
+                                             class="input__update-name"
+                                          />
+                                          <input
+                                             type="text"
+                                             name="phonenumber"
+                                             value="<%=user.phonenumber%>"
+                                             placeholder="Nhập Số điện thoại"
+                                             class="input__update-phone"
+                                          />
+                                          <button type="submit" value="Submit" class="profile__btn-update1">
+                                             Thay đổi
+                                          </button>
+                                       </form>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
                         </div>
-                    </div>
-                    
-                    <div class="col-md-8" style="padding-left: 70px;">
-                        <div class="profile__card">
-                            <div class="profile__card-header">
-                                <h2 class="profile__title-info-2"></h2>
-                            </div>
-                            <div class="profile__card-body">
-                                <ul class="profile__information">
-                                        <li class="profile__infor-item">
-                                            <h3 class="profile__infor-label">Tên người dùng</h3>
-                                            <div class="profile__fullName infor-content"><%=user.fullname%> </div>
-                                        </li>
-                                        <li class="profile__infor-item">
-                                            <h3 class="profile__infor-label">Email</h3>
-                                            <div class="profile__email infor-content"><%=user.email%> </div>
-                                        </li>
-                                        
-                                        <li  class="profile__infor-item">
-                                            <h3 class="profile__infor-label">Số điện thoại</h3>
-                                            <div class="profile__phoneNumber infor-content"><%=user.phonenumber%> </div>
-                                        </li>
-                                    </ul>
-                            </div>
-                            <div class="profile__card-footer">
-                                <button class="profile__btn-update" id="myBtn">Chỉnh sửa</button>
-                                <button class="profile__btn-update" id="myBtn__password">Đổi mật khẩu</button>
-                                <!-- Trigger/Open The Modal -->    
-                                        <!-- The Modal -->
-                                <div id="myModal" class="modal">
-                                    <!-- Modal content -->
-                                        <div class="modal--content">
-                                           <span class="close">&times;</span>
-                                            <h1>Change Password</h1>
-                                            <div class="row1">
-                                                <div class="col l-6">
-                                                    <h3 class="profile__infor-label">Tên người dùng:</h3>
-                                                    <h3 class="profile__infor-label">Số điện thoại:</h3>
-                                                </div>
-                                                <div class="col l-6">
-                                                    <div class="edit__profile">
-                                                        <form action="/profile/update?_method=PUT" method="POST">
-                                                            <input type="text" name="fullname" value="<%=user.fullname%>" placeholder="Nhập tên" class="input__update-name">
-                                                            <input type="text" name="phonenumber" value="<%=user.phonenumber%>" placeholder="Nhập Số điện thoại" class="input__update-phone">
-                                                        <button type="submit" value="Submit" class="profile__btn-update1">Thay đổi</button>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                       </div>
-                                       <div id="myModal__password" class="modal__password">
-                                        <!-- Modal content -->
-                                            <div class="modal--content2">
-                                               <span class="close__password">&times;</span>
-                                                <h1 style="padding-bottom:30px ;
-                                                ">Change Contact</h1>
-                                                <div class="row2">
-                                                    <div class="col l-6">
-                                                        <h3 class="profile__infor-label">Mật khẩu cũ:</h3>
-                                                        <h3 class="profile__infor-label">Mật khẩu mới:</h3>
-                                                        <h3 class="profile__infor-label"></h3>
-                                                    </div>
-                                                    <div class="col l-6-2">
-                                                        <div class="edit__profile-2">
-                                                            <form action="/profile/updatePass?_method=PUT" method="POST">
-                                                                <input type="password" name="oldPassword" value="" placeholder="Nhập mật khẩu cũ" class="input__update">
-                                                                <input type="password" name="newPassword" value="" placeholder="Nhập mật khẩu mới" class="input__update">
-                                                                <input type="password" name="reNewPassword" value="" placeholder="Nhập lại mật khẩu mới" class="input__update">
-                                                            <button type="submit" value="Submit" class="profile__btn-update">Thay đổi</button>
-                                                            </form>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                           </div>
-                            </div>
+                        <div id="myModal__password" class="modal__password">
+                           <!-- Modal content -->
+                           <div class="modal--content2">
+                              <span class="close__password">&times;</span>
+                              <h1 style="padding-bottom: 30px">Change Contact</h1>
+                              <div class="row2">
+                                 <div class="col l-6">
+                                    <h3 class="profile__infor-label">Mật khẩu cũ:</h3>
+                                    <h3 class="profile__infor-label">Mật khẩu mới:</h3>
+                                    <h3 class="profile__infor-label"></h3>
+                                 </div>
+                                 <div class="col l-6-2">
+                                    <div class="edit__profile-2">
+                                       <form action="/profile/updatePass" method="POST">
+                                          <input
+                                             type="password"
+                                             name="oldPassword"
+                                             value=""
+                                             placeholder="Nhập mật khẩu cũ"
+                                             class="input__update"
+                                          />
+                                          <input
+                                             type="password"
+                                             name="newPassword"
+                                             value=""
+                                             placeholder="Nhập mật khẩu mới"
+                                             class="input__update"
+                                          />
+                                          <input
+                                             type="password"
+                                             name="reNewPassword"
+                                             value=""
+                                             placeholder="Nhập lại mật khẩu mới"
+                                             class="input__update"
+                                          />
+                                          <button type="submit" value="Submit" class="profile__btn-update">
+                                             Thay đổi
+                                          </button>
+                                       </form>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
                         </div>
-                    </div>
-                </div>
-        </div>
-   </div>
-   <script>
-    // Get the modal
-var modal = document.getElementById("myModal");
-var modalpass = document.getElementById("myModal__password");
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <script>
+         // Get the modal
+         var modal = document.getElementById('myModal');
+         var modalpass = document.getElementById('myModal__password');
 
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-var btnpass = document.getElementById("myBtn__password");
+         // Get the button that opens the modal
+         var btn = document.getElementById('myBtn');
+         var btnpass = document.getElementById('myBtn__password');
 
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-var spanpass = document.getElementsByClassName("close__password");
+         // Get the <span> element that closes the modal
+         var span = document.getElementsByClassName('close')[0];
+         var spanpass = document.getElementsByClassName('close__password');
 
-// When the user clicks on the button, open the modal
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-btnpass.onclick = function() {
-  modalpass.style.display = "block";
-}
+         // When the user clicks on the button, open the modal
+         btn.onclick = function () {
+            modal.style.display = 'block';
+         };
+         btnpass.onclick = function () {
+            modalpass.style.display = 'block';
+         };
 
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-spanpass.onclick = function() {
-  modalpass.style.display = "none";
-}
+         // When the user clicks on <span> (x), close the modal
+         span.onclick = function () {
+            modal.style.display = 'none';
+         };
+         spanpass.onclick = function () {
+            modalpass.style.display = 'none';
+         };
 
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-window.onclick = function(event) {
-  if (event.target == modalpass) {
-    modalpass.style.display = "none";
-  }
-}
-   </script>
-</body>
+         // When the user clicks anywhere outside of the modal, close it
+         window.onclick = function (event) {
+            if (event.target == modal) {
+               modal.style.display = 'none';
+            }
+         };
+         window.onclick = function (event) {
+            if (event.target == modalpass) {
+               modalpass.style.display = 'none';
+            }
+         };
+      </script>
+   </body>
 </html>
