--- a/views/components/search.ejs
+++ b/views/components/search.ejs
@@ -1,153 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles/search.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <%- include('../layouts/header')%>
-    <section>
-      <div class="favorite__main grid wide">
-        <div class="favorite__container">
-          <div class="search card">
-            <div class="row">
-              <div class="col-md-12">
-                <form action="/search" method="POST">
-                  <div class="background_card">
-                    <div class="inputAdress">
-                      <div class="iconAdress">
-                        <i class="fa-solid fa-location-dot"></i>
-                      </div>
-                      <div class="inputAdress__inner">
-                        <select name="region" id="">
-                          <option value="">Miền</option>
-                          <option value="Miền Bắc">Miền Bắc</option>
-                          <option value="Miền Trung">Miền Trung</option>
-                          <option value="Miền Nam">Miền Nam</option>
-      
-                        </select>
-                      </div>
-                    </div>
-      
-                    <div class="inputPrice">
-                      <div class="iconAdress">
-                        <i class="fa-solid fa-money-bill-wave"></i>
-                      </div>
-                      <div class="inputAdress__inner">
-                        <select name="price" id="">
-                          <option value="">Giá tiền</option>
-                          <option value="1000000000">Dưới 1.000.000.000</option>
-                          <option value="2000000000">Dưới 2.000.000.000</option>
-                          <option value="3000000000">Dưới 3.000.000.000</option>
-                          <option value="5000000000">Dưới 5.000.000.000</option>
-                          <option value="10000000000">Dưới 10.000.000.000</option>
-                        </select>
-                      </div>
-                    </div>
-      
-                    <div class="inputType">
-                      <div class="iconAdress">
-                        <i class="fa-solid fa-building"></i>
-                      </div>
-                      <div class="inputAdress__inner">
-                        <select name="acreage" id="">
-                          <option value="">Diện tích</option>
-                          <option value="20">Dưới 20m</option>
-                          <option value="30">Dưới 30m</option>
-                          <option value="50">Dưới 50m</option>
-                          <option value="70">Dưới 70m</option>
-      
-                        </select>
-                      </div>
-                    </div>
-                    <button class="banner__btnSearch" type="submit">
-                      <i class="fa-solid fa-magnifying-glass"></i>
-                    </button>
-                  </div>
-              </form>
-              </div>
-            </div>
-          </div>
-          <h3>Có <%=listRoom.length%> kết quả được tìm thấy</h3>
-          <div class="searchResult__content">
-            <% for(let i = 0; i < listRoom.length; i++) {%>
-            <div class="row">
-              <div class="col-md-3">
-                <img
-                  src="<%= listRoom[i].images[0].url %>"
-                  alt=""
-                  class="img-thumbnail"
-                />
-              </div>
-              <div class="col-md-8 mt-3">
-                <a href="/detail/<%=listRoom[i]._id %>" class="">
-                  <h6 class="title__description">
-                    <%= listRoom[i].heading %>
-                  </h6>
-                </a>
-                <div class="content__inner__card pt-3">
-                  <span
-                    class="p-1 border border-secondary rounded ml-5 bg-gradient-info">
-                    <%= listRoom[i].price %> VNĐ</span>
-                  <span
-                    class="p-1 border border-secondary rounded ml-4 bg-gradient-info"
-                    ><%= listRoom[i].acreage %></span
-                  >
-                  <div class="content__address mt-3 mb-3">
-                    <i class="fa-solid fa-location-dot mr-1"></i>
-                    <%= listRoom[i].ward %>, <%= listRoom[i].district %>, <%= listRoom[i].city %>
-                  </div>
-                  <div class="content__description mt-3 mb-3">
-                    <p>
-                      <%= listRoom[i].description %>
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-1 d-flex">
-                <div class="buttonDiv">
-                  <button class="button_hearth">
-                    <i class="fa-regular fa-heart"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-            <% } %>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Document</title>
+      <link rel="stylesheet" href="/styles/search.css" />
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
+      />
+      <link
+         rel="stylesheet"
+         href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+         crossorigin="anonymous"
+      />
+      <script
+         src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+         crossorigin="anonymous"
+      ></script>
+      <script
+         src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+         crossorigin="anonymous"
+      ></script>
+      <script
+         src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+         crossorigin="anonymous"
+      ></script>
+   </head>
+   <body>
+      <%- include('../layouts/header')%>
+      <section>
+         <div class="favorite__main grid wide">
+            <div class="favorite__container">
+               <div class="search card">
+                  <div class="row">
+                     <div class="col-md-12">
+                        <form action="/search" method="POST">
+                           <div class="background_card">
+                              <div class="inputAdress">
+                                 <div class="iconAdress">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                 </div>
+                                 <div class="inputAdress__inner">
+                                    <select name="region" id="">
+                                       <option value="">Miền</option>
+                                       <option value="Miền Bắc">Miền Bắc</option>
+                                       <option value="Miền Trung">Miền Trung</option>
+                                       <option value="Miền Nam">Miền Nam</option>
+                                    </select>
+                                 </div>
+                              </div>
 
-          </div>
-        </div>
-      </div>
-    </section>
-  </body>
+                              <div class="inputPrice">
+                                 <div class="iconAdress">
+                                    <i class="fa-solid fa-money-bill-wave"></i>
+                                 </div>
+                                 <div class="inputAdress__inner">
+                                    <select name="price" id="">
+                                       <option value="">Giá tiền</option>
+                                       <option value="1000000000">Dưới 1.000.000.000</option>
+                                       <option value="2000000000">Dưới 2.000.000.000</option>
+                                       <option value="3000000000">Dưới 3.000.000.000</option>
+                                       <option value="5000000000">Dưới 5.000.000.000</option>
+                                       <option value="10000000000">Dưới 10.000.000.000</option>
+                                    </select>
+                                 </div>
+                              </div>
+
+                              <div class="inputType">
+                                 <div class="iconAdress">
+                                    <i class="fa-solid fa-building"></i>
+                                 </div>
+                                 <div class="inputAdress__inner">
+                                    <select name="acreage" id="">
+                                       <option value="">Diện tích</option>
+                                       <option value="20">Dưới 20m</option>
+                                       <option value="30">Dưới 30m</option>
+                                       <option value="50">Dưới 50m</option>
+                                       <option value="70">Dưới 70m</option>
+                                    </select>
+                                 </div>
+                              </div>
+                              <button class="banner__btnSearch" type="submit">
+                                 <i class="fa-solid fa-magnifying-glass"></i>
+                              </button>
+                           </div>
+                        </form>
+                     </div>
+                  </div>
+               </div>
+               <h3>Có <%=listRoom.length%> kết quả được tìm thấy</h3>
+               <div class="searchResult__content">
+                  <% for(let i = 0; i < listRoom.length; i++) {%>
+                  <div class="row">
+                     <div class="col-md-3">
+                        <img src="<%= listRoom[i].images[0].url %>" alt="" class="img-thumbnail" />
+                     </div>
+                     <div class="col-md-8 mt-3">
+                        <a href="/detail/<%=listRoom[i]._id %>" class="">
+                           <h6 class="title__description"><%= listRoom[i].heading %></h6>
+                        </a>
+                        <div class="content__inner__card pt-3">
+                           <span class="p-1 border border-secondary rounded ml-5 bg-gradient-info">
+                              <%= listRoom[i].price %> VNĐ</span
+                           >
+                           <span class="p-1 border border-secondary rounded ml-4 bg-gradient-info"
+                              ><%= listRoom[i].acreage %></span
+                           >
+                           <div class="content__address mt-3 mb-3">
+                              <i class="fa-solid fa-location-dot mr-1"></i>
+                              <%= listRoom[i].ward %>, <%= listRoom[i].district %>, <%= listRoom[i].city %>
+                           </div>
+                           <div class="content__description mt-3 mb-3">
+                              <p><%= listRoom[i].description %></p>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-1 d-flex">
+                        <div class="buttonDiv">
+                           <button class="button_hearth">
+                              <i class="fa-regular fa-heart"></i>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
+                  <% } %>
+               </div>
+            </div>
+         </div>
+      </section>
+   </body>
 </html>
