--- a/views/layouts/register.ejs
+++ b/views/layouts/register.ejs
@@ -1,50 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="styles/register.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" >
-</head>
-<body>
-  <div class="main">
-    <h1 class="title"> Resort Real Estate Analysis </h1>
-    <div class="content-main">
-        <div class="content-left">
-          <h2 class="agileits1">Resort Real Estate Analysis </h2>
-          <p class="agileits2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-        <div class="content-right">
-          <form class="user" action="register" method="post">
-            <div class="form-group">	
-              <input type="email" id="email" name="email" placeholder="mail@example.com" title="Please enter a valid email" required="">
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Register</title>
+      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+      <link rel="stylesheet" href="styles/register.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
+   </head>
+   <body>
+      <div class="main">
+         <h1 class="title">Resort Real Estate Analysis</h1>
+         <div class="content-main">
+            <div class="content-left">
+               <h2 class="agileits1">Resort Real Estate Analysis</h2>
+               <p class="agileits2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <div class="form-group"> 
-              <input type="text" id="fullname" name="fullname"  placeholder="Tên Người Dùng" title="Please enter your fullname" required="">
-            </div>
-            <div class="form-group"> 
-              <input type="text" id="phonenumber" name="phonenumber"  placeholder="Số điện thoại" title="Please enter your Phone Number" required="">
-            </div>
-            <div class="form-group ">	
-              <input type="password" class="lock" name="password" placeholder="Mật khẩu" id="password" required="">
-            </div>	
-            <div class="form-group ">	
-              <input type="password" class="lock" name="confirm-password" placeholder="Nhập lại mật khẩu" id="confirm-password" required="">
-            </div>			
-            
-            <button type="submit" class="register" value="Register">Đăng ký</button>
-          </form>
-        <div class="back-login">
-          <span>Bạn đã có tài khoản? <a href="./login">Đăng Nhập</a> ở đây. </span>
-        </div>
-        </div>
-       
-    </div>
-  </div>
-</body>
+            <div class="content-right">
+               <form class="user" action="register" method="post">
+                  <div class="form-group">
+                     <input
+                        type="email"
+                        id="email"
+                        name="email"
+                        placeholder="mail@example.com"
+                        title="Please enter a valid email"
+                        required=""
+                     />
+                  </div>
+                  <div class="form-group">
+                     <input
+                        type="text"
+                        id="fullname"
+                        name="fullname"
+                        placeholder="Tên Người Dùng"
+                        title="Please enter your fullname"
+                        required=""
+                     />
+                  </div>
+                  <div class="form-group">
+                     <input
+                        type="text"
+                        id="phonenumber"
+                        name="phonenumber"
+                        placeholder="Số điện thoại"
+                        title="Please enter your Phone Number"
+                        required=""
+                     />
+                  </div>
+                  <div class="form-group">
+                     <input
+                        type="password"
+                        class="lock"
+                        name="password"
+                        placeholder="Mật khẩu"
+                        id="password"
+                        required=""
+                     />
+                  </div>
+                  <div class="form-group">
+                     <input
+                        type="password"
+                        class="lock"
+                        name="confirm-password"
+                        placeholder="Nhập lại mật khẩu"
+                        id="confirm-password"
+                        required=""
+                     />
+                  </div>
 
+                  <button type="submit" class="register" value="Register">Đăng ký</button>
+               </form>
+               <div class="back-login">
+                  <span>Bạn đã có tài khoản? <a href="./login">Đăng Nhập</a> ở đây. </span>
+               </div>
+            </div>
+         </div>
+      </div>
+   </body>
 </html>
